<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.example.physlearn.Activities.LoginActivity">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@drawable/bg_gradient"
        android:padding="@dimen/activity_horizontal_margin">


        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:src="@drawable/logo1"
            android:adjustViewBounds="true"
            android:scaleType="fitStart"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/imageView3" />


        <EditText
            android:id="@+id/email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:height="20dp"
            android:background="@drawable/textshape"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textSize="17sp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="37dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView3"
            android:layout_marginRight="10dp"
            app:layout_constraintRight_toRightOf="parent" />


        <EditText
            android:id="@+id/password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:height="20dp"
            android:background="@drawable/textshape"
            android:hint="@string/hint_password"
            android:textSize="17sp"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:layout_marginLeft="0dp"
            app:layout_constraintLeft_toLeftOf="@+id/email"
            android:layout_marginRight="0dp"
            app:layout_constraintRight_toRightOf="@+id/email"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/email"
            app:layout_constraintHorizontal_bias="0.0" />


        <!-- Login Button -->

        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonshape"
            android:text="@string/btn_login"
            android:textColor="@android:color/white"
            android:layout_marginLeft="0dp"
            app:layout_constraintLeft_toLeftOf="@+id/password"
            android:layout_marginRight="0dp"
            app:layout_constraintRight_toRightOf="@+id/password"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/password"
            app:layout_constraintHorizontal_bias="0.492" />

        <Button
            android:id="@+id/btn_reset_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="@string/btn_forgot_password"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_login"
            android:layout_marginLeft="0dp"
            app:layout_constraintLeft_toLeftOf="@+id/btn_login"
            android:layout_marginRight="0dp"
            app:layout_constraintRight_toRightOf="@+id/btn_login"
            app:layout_constraintHorizontal_bias="0.0" />

        <!-- Link to Login Screen -->

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="@string/btn_link_to_register"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:layout_marginLeft="0dp"
            app:layout_constraintLeft_toLeftOf="@+id/btn_reset_password"
            android:layout_marginRight="0dp"
            app:layout_constraintRight_toRightOf="@+id/btn_reset_password"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_reset_password" />
    </android.support.constraint.ConstraintLayout>
</android.support.design.widget.CoordinatorLayout>
