<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.example.physlearn.Activities.LoginActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/bg_gradient"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">


        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:src="@drawable/logo1"
            android:adjustViewBounds="true"
            android:scaleType="fitStart"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/imageView2" />

        <EditText
            android:id="@+id/email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:height="20dp"
            android:background="@drawable/textshape"
            android:hint="@string/email"
            android:textSize="17sp"
            android:padding="15dp"
            android:textColorHint="@color/white"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/white"
            android:layout_marginLeft="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="10dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="37dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />


        <EditText
            android:id="@+id/password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:hint="@string/hint_password"
            android:textSize="20sp"
            android:textColorHint="@color/white"
            android:background="@drawable/textshape"
            android:padding="15dp"
            android:imeActionId="@+id/login"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@android:color/white"
            android:layout_marginLeft="0dp"
            app:layout_constraintLeft_toLeftOf="@+id/email"
            android:layout_marginRight="0dp"
            app:layout_constraintRight_toRightOf="@+id/email"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/email"
            tools:ignore="InvalidImeActionId" />


        <Button
            android:id="@+id/sign_up_button"
            style="?android:textAppearanceSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonshape"
            android:text="@string/action_sign_in_short"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:layout_marginLeft="0dp"
            app:layout_constraintLeft_toLeftOf="@+id/password"
            android:layout_marginRight="0dp"
            app:layout_constraintRight_toRightOf="@+id/password"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/password" />

        <!-- Link to Login Screen -->

        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="@string/btn_link_to_login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:layout_marginLeft="0dp"
            app:layout_constraintLeft_toLeftOf="@+id/sign_up_button"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/sign_up_button"
            android:layout_marginRight="0dp"
            app:layout_constraintRight_toRightOf="@+id/sign_up_button" />
    </android.support.constraint.ConstraintLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />

</android.support.design.widget.CoordinatorLayout>
